gccida/g0/product_cheap_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/product_cheap_p/src/loop.c:8283:16: error: use of undeclared identifier 'machine_mode'
expand_mult( ( machine_mode)*( ( unsigned __int8 *)aa + 2), aa, ba, 0LL, 1); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/product_cheap_p/src/obj/loop.o] Error 1
